[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-pydantic"
version = "0.1.0"
description = "Production-ready library for converting Pydantic models into Gymnasium environments with automatic space derivation and multiple security layers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["gymnasium", "pydantic", "reinforcement-learning", "stable-baselines3", "rl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "gymnasium>=0.29.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "stable-baselines3>=2.0.0",
]

[project.optional-dependencies]
security = [
    "RestrictedPython>=6.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.9",
]
container = [
    "docker>=6.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
    "httpx>=0.24.0",
]
all = [
    "gym-pydantic[security,api,container,dev]"
]

[project.urls]
Homepage = "https://github.com/yourusername/gym-pydantic"
Documentation = "https://gym-pydantic.readthedocs.io"
Repository = "https://github.com/yourusername/gym-pydantic"
Issues = "https://github.com/yourusername/gym-pydantic/issues"

[tool.setuptools]
packages = ["gym_pydantic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=gym_pydantic --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
